# adversarial-autoencoders

./: .gitignore  README.md  pyproject.toml
experiments/: likelihood_aa_mnist.ipynb  likelihood_aa_tfd.ipynb  likelihood_experiment.ipynb  likelihood_gan_mnist.ipynb  likelihood_gan_tfd.ipynb  semi_supervised_experiment.ipynb  supervised_experiment.ipynb  supervised_experiment2.ipynb
experiments/logs/likelihood/: 300_gan_mnist.tfevents  300_gan_tfd_possible1.tfevents  300_gan_tfd_possible2.tfevents  5000_aae_mnist.tfevents  scrapbook.txt
experiments/logs/supervised/: discriminator_loss_logs.csv  generator_loss_logs.csv  reconstruction_loss_logs.csv  supervised_no_noise.csv  supervised_noise.csv  supervised_noise_1.csv  supervised_noise_sgd_1.csv  supervised_noise_sgd_5.csv
src/: aae.py  aae_semisupervised.py  aae_supervised.py  components.py  dataloader.py  gan.py  likelihood.py  unsupervised.py  unsupervised_clustering_experiment.ipynb  utils.py
src/adversarial_autoencoder/: adversarial.py  adverserial-semi-supervised.py  components.py  dimensionality_reduction.py  dimensionality_reduction_experiment.ipynb  experiment.py  likelihood.py  likelihood_aa_mnist.ipynb  likelihood_aa_tfd.ipynb  likelihood_experiment.ipynb  semi_supervised_experiment.ipynb  semisupervised.py  supervised.py  supervised_experiment.ipynb  train_log.csv  training_log.csv  unsupervised_clustering_experiment.ipynb
src/config/: mnist_semi_supervised.yaml  svhn_semi_supervised.yaml  unsupervised_clustering.yaml
src/dataloader/: dataloader.py
tests/: test_dataloader.py
(+56 files in other folders)
