[project]
name = "adversarial-autoencoder"
version = "0.1.0"
description = "Implementations and Extensions for Generative Modelling"
authors = [
    {name = "Henry Page", email = "dev@henrypage.com"},
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.6.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "tensorboard>=2.19.0",
    "torchvision>=0.21.0",
]

[tool.poetry]
packages = [{include = "adversarial_autoencoder", from = "src"}]
package-mode=false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
