[project]
name = "adversarial-autoencoder"
version = "0.1.0"
description = "Implementations and Extensions for Generative Modelling"
authors = [
    {name = "Henry Page", email = "dev@henrypage.com"},
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.6.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "matplotlib>=3.10.1",
    "tensorboard>=2.19.0",
    "torchvision>=0.21.0",
    "scikit-learn==1.6.1",
    "notebook (>=7.4.1,<8.0.0)",
]

[tool.poetry]
packages = [{include = "adversarial_autoencoder", from = "src"}]
package-mode=false


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
